kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nastenka-kustomize
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: nastenka-kustomize
    app.kubernetes.io/version: "1.1"
  name: nastenka-kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nastenka-kustomize
      app.kubernetes.io/name: nastenka-kustomize
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nastenka-kustomize
        app.kubernetes.io/name: nastenka-kustomize
    spec:
      containers:
      - image: reg.edgeclusters.com/academy/nastenka:1.1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nastenka-kustomize
        volumeMounts:
          - name: config-files
            mountPath: /config
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: reg-edgeclusters-com
      restartPolicy: Always
      volumes:
        - name: config-files
          configMap:
            name: config-files
