kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: nastenka-kustomize
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: nastenka-kustomize
    app.kubernetes.io/version: "1.1"
  name: nastenka-kustomize
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: nastenka-kustomize
    app.kubernetes.io/name: nastenka-kustomize
  sessionAffinity: None
  type: ClusterIP
