kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/instance: nastenka-kustomize
    app.kubernetes.io/name: nastenka-kustomize
    app.kubernetes.io/version: "1.1"
  name: nastenka-kustomize
spec:
  ingressClassName: nginx
  rules:
  - host: apps.edgeclusters.com
    http:
      paths:
      - backend:
          service:
            name: nastenka-kustomize
            port:
              number: 80
        path: /nastenka-kustomize(/|$)(.*)
        pathType: Prefix
